2015-02-06  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_demo.sql
	  include/functions_form.php
	  include/js/integria_incident_search.js
	  operation/incidents/incident_detail.php
	  operation/incidents/incident_search_logic.php
	  operation/incidents/incident_type_field.php
	  
	* images/help/linked_field1.png
	  images/help/linked_field2.png
	  images/help/linked_field3.png
	  images/help/linked_field4.png
	  include/help/en/help_linked_values.php
	  include/help/es/help_linked_values.php: Added files.

2015-02-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  godmode/usuarios/import_from_csv.php
	  include/functions_form.php
	  include/js/integria_incident_search.js
	  operation/incidents/incident_detail.php
	  operation/incidents/incident_search_logic.php
	  operation/incidents/incident_type_field.php
	  operation/incidents/type_detail.php: Fixed bug #1732.

2015-01-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/export_csv.php
	  include/functions_crm.php
	  operation/invoices/invoice_detail.php: Fixed bugs
	#1649, #1627.

2014-11-24  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/styles/integria.css: Changed position of
	footer. Ticket #1519.

2014-11-20  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_incidents.php: Fixed the length of some
	legend names of the ticket stats.

2014-11-20  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_incidents.php
	  include/functions_graph.php
	  include/functions_db.php: Changed the way of calculate
	the tickets SLAs.

2014-11-20  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* include/functions_incidents.php: Fixed an error on the
	function "incidents_get_sla_graph_seconds".

2014-11-12  Vanessa Gil <vanessa.gil@artica.es>
	
	* godmode/setup/offline_update.php: Improvements in
	Offline updates. Ticket #1080.

	* operation/companies/company_detail.php: Ticket #1548.
