@@ -1,34 +1,34 @@
 <h1>Linked fields</h1>
 
 <p>
-Son campos personalizados relacionados entre sí. Los vamos a explicar con un ejemplo: <br><br>
+Linked fields are custom fields related. We will explain with an example: <br><br>
 TIPO,VEHICULO,MARCA,MODELO,MOTOR <br><br>
 
-Primero crearemos el campo TIPO. En este caso, no seleccionamos campo padre porque es el primero en nuestra jerarquía. Los valores irán separados por coma.
+We create the field TIPO. In this case we don't select any parent because it's the first element in hierarchy. Values are separated by comma.
 <p>
 <?php print_image("images/help/linked_field1.png", false); ?>
 </p>
 
 <br><br>
 
-Después crearemos el campo MARCA. Habrá que seleccionar el campo padre TIPO. Después rellenaremos el campo con los valores separados por coma
-como en el caso anterior. <br> 
-Como este campo sí tiene un padre, habrá que asociar los valores. Para ello, pondremos delante el valor del campo padre separado de |
+We create the field MARCA. Select field TIPO as parent. Values are separated by comma. <br> 
+This field has parent, so you have to associate values separated by |
 
 <p>
 <?php print_image("images/help/linked_field2.png", false); ?>
 </p>
 
-El siguiente campo que vamos a crear es MODELO. Se selecciona el padre MARCA y se ponen los valores.
+We create the field MODELO. Select field MARCA as parent and enter values.
 
 <p>
 <?php print_image("images/help/linked_field3.png", false); ?>
 </p>
 
-Por último, creamos el campo MOTOR.
+We create field MOTOR.
 
 <p>
 <?php print_image("images/help/linked_field4.png", false); ?>
 </p>
 
 </p>
+
