@@ -1,3 +1,8 @@
+2015-02-09  Vanessa Gil <vanessa.gil@artica.es>
+	
+	* include/help/en/help_linked_values.php
+	  include/help/es/help_linked_values.php: Updated help.
+
 2015-02-06  Vanessa Gil <vanessa.gil@artica.es>
 	
 	* integria_demo.sql
